# Controller

./: .gitignore  .gitmodules  2mb_spiffs.csv  CMakeLists.txt  Controller.code-workspace  README.md  min_spiffs.csv  platformio.ini  sdkconfig  sdkconfig.esp-wrover-kit  sdkconfig.esp-wrover-kit.old  sdkconfig.old  sdkconfigq
components/sdp/: CMakeLists.txt  Kconfig  Kconfig copy  Kconfig.projbuild  README.md  sdp.c  sdp.h  sdp_def.c  sdp_def.h  sdp_helpers.c  sdp_helpers.h  sdp_mesh.c  sdp_mesh.h  sdp_messaging.c  sdp_messaging.h  sdp_monitor.c  sdp_monitor.h  sdp_peer.c  sdp_peer.h  sdp_work_queue.c  sdp_work_queue.h  sdp_worker.c  sdp_worker.h
components/sdp/ble/: Kconfig  ble.c  ble_client.c  ble_client.h  ble_gatt_svr.c  ble_global.c  ble_global.h  ble_init.c  ble_init.h  ble_peer.c  ble_server.c  ble_server.h  ble_service.c  ble_service.h  ble_spp.c  ble_spp.h  gatt_svr.c  peer.c
components/sdp/espnow/: Kconfig  espnow.c  espnow.h  espnow_init.c  espnow_init.h  espnow_messaging.c  espnow_messaging.h  espnow_peer.c  espnow_peer.h
components/sdp/gsm/: Kconfig  gsm.c  gsm.h  gsm_def.h  gsm_init.c  gsm_init.h  gsm_ip.c  gsm_ip.h  gsm_mqtt.c  gsm_mqtt.h  gsm_task.c  gsm_task.h  gsm_worker.c  gsm_worker.h
components/sdp/i2c/: Kconfig  README.md  i2c.c  i2c.h  i2c_messaging.c  i2c_messaging.h  i2c_peer.c  i2c_peer.h  i2c_simulate.c  i2c_simulate.h  i2c_worker.c  i2c_worker.h
components/sdp/lora/: Kconfig  lora.c  lora.h  lora_init.c  lora_init.h  lora_lib.c  lora_lib.h  lora_messaging.c  lora_messaging.h  lora_peer.c  lora_peer.h  lora_sx126x_lib.c  lora_sx126x_lib.h  lora_sx127x_lib.c  lora_sx127x_lib.h  lora_worker.c  lora_worker.h
src/: main.c  (+10 more)
(+54 files in other folders)
